# Zombie-Survival

./: .gitignore  CMakeLists.txt
include/: boss.h  camera.h  main.h  model_loader.h  player.h  powerup.h  projectile.h  vector3f.h  zombie.h
libs/assimp/lib/: zlib.lib
src/: boss.cpp  camera.cpp  main.cpp  model_loader.cpp  player.cpp  powerup.cpp  projectile.cpp  zombie.cpp
